fix: huge font-size on mobile for numberpad

--- a/src/components/NumberPad.css
+++ b/src/components/NumberPad.css
@@ -3,10 +3,12 @@
     grid-template-columns: auto auto auto auto auto auto auto auto auto;
   }
   .NumberKey {
-    font-size: 10vw;
+    font-size: 8vw;
     width: 10vw;
     height: 10vw;
     background-color: transparent;
+    margin: 0%;
+    padding: 0%;
   }
 }
 @media only screen and (min-width: 600px) {
@@ -20,13 +22,12 @@
     height: clamp(2rem, 6vw, 5rem);
     background-color: #eaeef4;
     margin: 3%;
+    padding-top: 1%;
+    padding-bottom: 10%;
   }
 }
 .NumberKey {
   color: #0072e3;
-
-  padding-top: 1%;
-  padding-bottom: 10%;
   border: none;
 }
 .NumberKey:hover {
